# OpenGL-rendering

./: .clang-format  .clang-tidy  CMakeLists.txt
cmake/: Conan.cmake  DisableWarnings.cmake  StaticAnalyzers.cmake
sources/: CMakeLists.txt
sources/renderer/: FPSClock.h  Window.cpp  Window.h  colors.h  main.cpp
src/: FPSClock.cpp  Window.cpp  main.cpp
